# AuthOne

./: .env  .gitignore  .pre-commit-config.yaml  README.md  __init__.py  _version.py  all_py_files.txt  fix_authone.patch  package-lock.json  pyproject.toml  pyrightconfig.json  service.py
.github/workflows/: ci.yml
authone/: api.py  config.py  db.py
authone/core/: casbin_adapter.py
authone/models/: __init__.py  role.py
authone/service/: auth_service.py
authone/storage/: sqlalchemy.py  sqlalchemy_repository.py
authone/tests/: test_auth.py
backend/: __init__.py  _version.py  api.py  app.py  config.py  db.py  models.py  rbac_model.conf  rbac_policy.csv
backend/api/: __all_routers__.py  deps.py  schemas.py
backend/api/routers/: access.py  accounts.py  groups.py  permissions.py  relations.py  resources.py  roles.py
backend/core/: __init__.py  auth_engine.py  casbin_adapter.py  casbin_engine.py  casbin_pg_adapter.py  engine.py
backend/db/: __init__.py  database.py  db_models.py  repository.py  unit_of_work.py
backend/models/: __init__.py  account.py  group.py  pydantic_models.py  resource.py  role.py  schemas.py
backend/service/: __init__.py  auth_service.py  exceptions.py
backend/storage/: interface.py  postgres.py  sqlalchemy.py  sqlalchemy_repository.py
backend/tests/: curl_test.sh  rbac_model.conf  test_api.py  test_auth.py  test_rbac.py
core/: __init__.py  casbin_adapter.py
frontend/: api.ts  jest.config.js  package-lock.json  package.json  page.tsx  providers.tsx  tailwind.config.js  tsconfig.json
frontend/components/: Layout.tsx
frontend/contexts/: TranslationContext.tsx
frontend/pages/: _app.tsx  accounts.tsx  groups.tsx  index.tsx  permissions.tsx  resources.tsx  roles.tsx
frontend/styles/: globals.css
frontend/tests/: index.test.tsx
models/: account.py  permission.py  resource.py
service/: auth_service.py
storage/: postgres.py
tests/: __init__.py  test_auth.py  test_iam_service.py
typings/casbin/: __init__.pyi  enforcer.pyi
