[tool.poetry]
name = "backend"
version = "0.1.0"
description = "AuthOne - AI platform IAM service with RBAC and ABAC via Casbin"
authors = ["xueyu <xueuy@qq.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.110"
uvicorn = "^0.27"
pydantic = "^1.10"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
casbin = "^1.18"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
mypy = "^1.10"
pyinstaller = "^6.4"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.14.2"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
