[tool.poetry]
name = "backend"
version = "0.1.0"
description = "AuthOne - AI platform IAM service with RBAC and ABAC via Casbin"
authors = ["xueyu <xueuy@qq.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.110"
uvicorn = "^0.27"
pydantic = {extras = ["email"], version = "^2.11.7"}
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
casbin = "^1.18"
asyncpg = "^0.30.0"
requests = "^2.32.4"
pydantic-settings = "^2.10.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
mypy = "^1.10"
pyinstaller = "^6.4"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.14.2"
pytest-asyncio = "==0.21.*"
aiosqlite = "^0.21.0"
pytest = "^8.4.1"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
